# scicomp-leftover

./: .gitignore  CHANGELOG  Dockerfile  LICENSE  Makefile  README.md  leftover.conf.ex  pyproject.toml
debian/: control  postinst  prerm
src/scicomp-leftover/: leftover.py
