[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scicomp-leftover"
version = "0.1.0"
authors = [
  { name="Scientific Computing", email="scicomp@fredhutch.org" },
]
description = "The _leftover_ script to purge processes without Slurm allocation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FredHutch/scicomp-leftover"
Issues = "https://github.com/FredHutch/scicomp-leftover/issues"
